Removed "on" from workflow.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,6 @@
 name: Rust
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 # Note, toolchain version must match the rustup version: either "nightly" or "nightly-YYYY-MM-DD"
 # and must contain the toolchain for the OS at the end.
@@ -15,90 +11,51 @@ env:
   TOOLCHAIN_VERSION: nightly-2020-05-14-x86_64-pc-windows-msvc
 
 jobs:
-  Lint:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup
-      run: rustup default ${RUSTUP_VERSION} && rustup component add clippy rustfmt
-    - name: Lint Ballista
-      run: cd rust && cargo clippy -- -D warnings
-    - name: Lint Integration Tests
-      run: cd integration-tests/rust && cargo clippy -- -D warnings
-    - name: Lint Benchmarks
-      run: cd benchmarks && cargo clippy -- -D warnings
-
-  Ubuntu:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup
-      run: rustup default ${RUSTUP_VERSION} && rustup component add rustfmt
-    - name: Build Ballista
-      run: cd rust && cargo build
-    - name: Build Integration Tests
-      run: cd integration-tests/rust && cargo build
-    - name: Build Benchmarks
-      run: cd benchmarks && cargo build
-    - name: Run tests
-      run: cd rust && cargo test
-
-  Mac:
-    runs-on: macOS-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Setup
-      run: |
-        brew install rustup
-        rustup default ${RUSTUP_VERSION} && rustup component add rustfmt
-    - name: Build Ballista
-      run: cd rust && cargo build
-    - name: Build Integration Tests
-      run: cd integration-tests/rust && cargo build
-    - name: Build Benchmarks
-      run: cd benchmarks && cargo build
-    - name: Run tests
-      run: cd rust && cargo test
-
-  Windows:
-    runs-on: windows-2016
-    steps:
-    - uses: actions/checkout@v2
-    - name: Prepare the Windows Build Environment
-      run: |
-        vcpkg update
-        vcpkg integrate install
-        vcpkg install openssl:x64-windows
-    - name: Setup Rust Nightly
-      run: |
-        rustup default nightly-2020-05-14
-        rustup toolchain install nightly-2020-05-14 --no-self-update
-        rustup component add rustfmt --toolchain nightly-2020-05-14-x86_64-pc-windows-msvc
-    - name: Build Ballista
-      run: |
-        cd rust && cargo build
-    - name: Build Integration Tests
-      run: |
-        cd integration-tests/rust && cargo build
-    - name: Build Becnhmarks
-      run: |
-        cd benchmarks && cargo build
-    - name: Run tests
-      run: |
-        cd rust && cargo test
-
+  # this job uses ":main" as the image tag. This is mainly due to https://github.com/docker/build-push-action/issues/40
   Docker:
     runs-on: ubuntu-latest
+    env:
+      # this points to the repository that others fork from. Useful to fetch cached images from
+      BASE_REPOSITORY: ${{ github.repository }}
+      BUILDER_IMAGE_NAME: docker.pkg.github.com/${{ github.repository }}/ballista-rust-builder
+      IMAGE_NAME: docker.pkg.github.com/${{ github.repository }}/ballista-rust
     steps:
     - uses: actions/checkout@v2
-    - name: Build and push image to GitHub Packages
-      uses: docker/build-push-action@v1
-      with:
-        username: ${{ GITHUB_ACTOR }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-        registry: docker.pkg.github.com
-        repository: ${{ GITHUB_REPOSITORY }}/ballista-rust
-        tag_with_ref: true
-        dockerfile: docker/rust.dockerfile
-        build_args: RELEASE_FLAG=
-        cache_froms: ${{ GITHUB_REPOSITORY }}/ballista-rust:main
+    # github does not provide a clean ref name. We build it here, see https://stackoverflow.com/a/58035262/931303
+    - name: Extract git reference name
+      shell: bash
+      run: echo "##[set-output name=ref;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_ref
+    # login to docker so that we can pull images from it.
+    - name: Docker login
+      run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    # try to fetch the latest builder image, so that we can re-use cached layers from it
+    # it tries fetching it from the following places in order
+    # - current fork, ref name
+    # - base repo, main
+    - name: Pull builder image
+      run: > 
+        docker pull "$BUILDER_IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}" ||
+        docker pull "docker.pkg.github.com/$BASE_REPOSITORY/ballista-rust-builder:main" ||
+        true
+    - name: Build builder image
+      run: >
+        docker build -f docker/rust.dockerfile
+        --cache-from $BUILDER_IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}
+        --cache-from docker.pkg.github.com/$BASE_REPOSITORY/ballista-rust-builder:main
+        -t $BUILDER_IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}
+        --target builder
+        .
+    # build the builder image and push it so that it is available for caching
+    - name: Push builder image
+      run: docker push $BUILDER_IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}
+    - name: Build image
+      run: >
+        docker build -f docker/rust.dockerfile
+        --cache-from $BUILDER_IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}
+        -t $IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}
+        .
+    - name: Push image
+      run: docker push $IMAGE_NAME:${{ steps.extract_ref.outputs.ref }}
