--- a/kubernetes/populate-data.yaml
+++ b/kubernetes/populate-data.yaml
@@ -6,9 +6,12 @@ spec:
   containers:
   - name: populate-data
     image: alpine:3.12.0
-    command: ["https://raw.githubusercontent.com/ballista-compute/ballista/main/dev/download-nyctaxi-files.sh", "|", "bash", "-s", "/mnt"]
-    # small file:
-    #command: ["wget", "http://samplecsvs.s3.amazonaws.com/SacramentocrimeJanuary2006.csv", "-P", "/mnt"]
+    command: ["/bin/sh", "-c"]
+    # download file; split it in ~10 parts; rm file
+    args:
+      - wget https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2019-01.csv -P /mnt &&
+        wget -O - https://raw.githubusercontent.com/ballista-compute/ballista/main/dev/split-csv.sh | /bin/sh -s /mnt/yellow_tripdata_2019-01.csv 766779 /mnt/nztaxi.csv &&
+        rm -rf /mnt/yellow_tripdata_2019-01.csv
     volumeMounts:
     - mountPath: /mnt
       name: data
